<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSelectMealHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAppDarkGrey"
            android:layout_marginBottom="12dp"
            android:text="@string/select_meal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewBreakfast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginBottom="8dp"
            android:text="@string/breakfast" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:text=" "
            android:background="#cccccc"/>

        <TextView
            android:id="@+id/textViewLunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/lunch"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:text=" "
            android:background="#cccccc"/>

        <TextView
            android:id="@+id/textViewBeforeTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/before_training" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:text=" "
            android:background="#cccccc"/>

        <TextView
            android:id="@+id/textViewAfterTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/after_training" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:text=" "
            android:background="#cccccc"/>

        <TextView
            android:id="@+id/textViewDinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dinner" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:text=" "
            android:background="#cccccc"/>

        <TextView
            android:id="@+id/textViewSnacks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/snacks" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:text=" "
            android:background="#cccccc"/>

        <TextView
            android:id="@+id/textViewSupper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="8dp"
            android:text="@string/supper" />

    </LinearLayout>
</ScrollView>