<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="13dp"
        android:layout_marginLeft="24dp">

        <!-- Headline -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewViewFoodName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAppDarkGrey"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginTop="12dp"
                    android:text="@string/name"
                    android:textSize="18sp" />


                <ImageView
                    android:id="@+id/imageViewAddToDiary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:srcCompat="@drawable/ic_add_circle_grey" />


            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textViewViewFoodManufactorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manufactor" />
        <!-- //Headline -->



        <!-- Image -->
            <ImageView
                android:id="@+id/imageViewViewFoodImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/logo" />
        <!-- //Image -->

        <!-- About -->
        <TextView
            android:id="@+id/textViewViewFoodAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about" />
        <!-- //About -->

        <!-- Description -->
        <TextView
            android:id="@+id/textViewViewFoodDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />
        <!-- //Description -->


        <!-- Calories table -->
        <TextView
            android:id="@+id/textViewViewFoodCaloriesTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/calories_table"
            android:textSize="18sp" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textViewViewFoodBlank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/blank"/>

                <TextView
                    android:id="@+id/textViewViewFoodEnergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/energy" />
                <TextView
                    android:id="@+id/textViewViewFoodProteins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/proteins" />
                <TextView
                    android:id="@+id/textViewViewFoodCarbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/carbs" />
                <TextView
                    android:id="@+id/textViewViewFoodFat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/fat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textViewViewFoodBlankPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/per_hundred_gran" />

                <TextView
                    android:id="@+id/textViewViewFoodEnergyPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/energy" />
                <TextView
                    android:id="@+id/textViewViewFoodProteinsPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/proteins" />
                <TextView
                    android:id="@+id/textViewViewFoodCarbsPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/carbs" />
                <TextView
                    android:id="@+id/textViewViewFoodFatPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/fat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textViewViewFoodBlankPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/per_meal" />

                <TextView
                    android:id="@+id/textViewViewFoodEnergyPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/per_meal" />
                <TextView
                    android:id="@+id/textViewViewFoodProteinsPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/proteins" />
                <TextView
                    android:id="@+id/textViewViewFoodCarbsPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/carbs" />
                <TextView
                    android:id="@+id/textViewViewFoodFatPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/fat" />
            </TableRow>
        </TableLayout>
        <!-- //Calories table -->
    </LinearLayout>
</ScrollView>